topic: bug fix type: minor module: commons description: Fixed some findBugs warnings.