@@ -45,7 +45,7 @@ public class IsCurve extends Function {
 
         // TODO is handling of multi geometries like this ok?
         boolean result = geom instanceof Curve || geom instanceof MultiCurve || geom instanceof MultiLineString;
-        return new TypedObjectNode[] { new PrimitiveValue( new Boolean( result ).toString() ) };
+        return new TypedObjectNode[] { new PrimitiveValue( Boolean.valueOf( result ).toString() ) };
     }
 
 }
