@@ -44,6 +44,6 @@ public class IsPoint extends Function {
 
         // TODO is handling of multi geometries like this ok?
         boolean isPoint = geom instanceof Point || geom instanceof MultiPoint;
-        return new TypedObjectNode[] { new PrimitiveValue( new Boolean( isPoint ).toString() ) };
+        return new TypedObjectNode[] { new PrimitiveValue( Boolean.valueOf( isPoint ).toString() ) };
     }
 }
