@@ -45,6 +45,6 @@ public class IsSurface extends Function {
 
         // TODO is handling of multi geometries like this ok?
         boolean isSurface = geom instanceof Surface || geom instanceof MultiPolygon || geom instanceof MultiSurface;
-        return new TypedObjectNode[] { new PrimitiveValue( new Boolean( isSurface ).toString() ) };
+        return new TypedObjectNode[] { new PrimitiveValue( Boolean.valueOf( isSurface ).toString() ) };
     }
 }
